for some time till issue with image i made it invisible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,7 +180,7 @@ body {
     
     text-align: center;
     margin-left: 8cm;
-    display: block;
+    display: none;
     width: 16%;
     border: 3px solid rgb(14, 22, 14);
     height: 20px;
